<?xml version="1.0" encoding="utf-8"?>



    <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/gray_bg"
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        app:cardCornerRadius="@dimen/dimen_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="0dp"
       >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="2dp"
        android:padding="@dimen/dimen_16">


        <ImageView
            android:id="@+id/img_user"
            android:layout_width="75dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/dimen_16"
            android:elevation="25dp"
            android:src="@drawable/user_img_color"
            app:layout_constraintStart_toEndOf="@id/img_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="87dp"
            android:layout_height="43dp"
            android:layout_margin="@dimen/dimen_16"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:elevation="20dp"
            android:text="Neha"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_25"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_user"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/lin_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_16"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dimen_8"
            android:paddingEnd="8dp"
            android:background="@drawable/rectangle_rounded"
            app:layout_constraintEnd_toStartOf="@id/lin_distance"
            app:layout_constraintStart_toStartOf="@id/img_user"
            app:layout_constraintTop_toBottomOf="@id/img_user">



            <ImageView
                android:id="@+id/img_battery"
                android:layout_width="24dp"
                android:layout_height="24dp"


                android:src="@drawable/ic_battery"

                app:tint="@color/purple_700" />


            <TextView
                android:id="@+id/battery_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/_90"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/dimen_16"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lin_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_16"
            android:orientation="horizontal"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lin_wifi"
            app:layout_constraintStart_toEndOf="@id/lin_battery"
            app:layout_constraintTop_toBottomOf="@id/img_user"

            >

            <ImageView
                android:id="@id/img_distance"
                android:layout_width="@dimen/dimen_25"
                android:layout_height="@dimen/dimen_25"
                android:src="@drawable/ic_send_msg"
                app:tint="@color/teal_200" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_223m"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/img_send_msg"
                app:layout_constraintTop_toBottomOf="@id/img_user"

                />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/lin_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_16"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/dimen_8"
            app:layout_constraintEnd_toStartOf="@id/img_call"
            app:layout_constraintStart_toEndOf="@id/lin_distance"
            app:layout_constraintTop_toBottomOf="@id/img_user">

            <ImageView
                android:id="@+id/img_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/ic_wifi"


                app:tint="@color/teal_200" />

            <TextView

                android:id="@+id/wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/wifi"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_call"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/dimen_8"

            android:background="@drawable/shape_circle"
            android:elevation="@dimen/dimen_16"
            android:padding="@dimen/dimen_8"
            android:src="@drawable/ic_call"
            app:layout_constraintBottom_toBottomOf="@id/lin_battery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/lin_battery" />


        <TextView
            android:id="@+id/time"
            android:layout_width="73dp"
            android:layout_height="0dp"

            android:elevation="@dimen/dimen_16"
            android:text="16:40"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card"
            app:layout_constraintTop_toTopOf="@+id/name"
            tools:ignore="NotSibling" />

        <ImageView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:elevation="@dimen/dimen_16"
            android:src="@drawable/location"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/address"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:elevation="@dimen/dimen_16"
            android:ellipsize="marquee"
            android:maxLines="3"
            android:text="@string/d_19_gali_no_1_pratap_nagar_saboli_delhi_110093"
            android:textColor="@color/darker_gray"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/location"
            app:layout_constraintTop_toBottomOf="@id/name" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>



